--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,14 +1,10 @@
 @import "bootstrap/bootstrap";
 @import "bootstrap/variables";
-
 $font-primary: "Montserrat", Arial, sans-serif;
-
 $white: #fff;
 $black: #000;
 $darken: #4a5562;
-
 $primary: #fa5bdd;
-
 @mixin border-radius($radius) {
 	-webkit-border-radius: $radius;
 	-moz-border-radius: $radius;
@@ -27,6 +23,7 @@ $primary: #fa5bdd;
 html {
 	// overflow-x: hidden;
 }
+
 body {
 	font-family: $font-primary;
 	background: $white;
@@ -41,9 +38,11 @@ body {
 		width: 100%;
 	}
 }
+
 span {
 	color: lighten($black, 75%);
 }
+
 a {
 	transition: 0.3s all ease;
 	color: $primary;
@@ -52,6 +51,7 @@ a {
 		color: $primary;
 	}
 }
+
 h1,
 h2,
 h3,
@@ -79,14 +79,12 @@ h5,
 		background: $black !important;
 		position: relative;
 	}
-
 	.navbar-brand {
 		color: $white;
 		@include media-breakpoint-up(lg) {
 			color: $black;
 		}
 	}
-
 	.navbar-nav {
 		> .nav-item {
 			> .nav-link {
@@ -110,7 +108,6 @@ h5,
 				}
 				opacity: 1 !important;
 			}
-
 			.dropdown-menu {
 				border: none;
 				background: $white;
@@ -118,7 +115,6 @@ h5,
 				-moz-box-shadow: 0px 10px 34px -20px rgba(0, 0, 0, 0.41);
 				box-shadow: 0px 10px 34px -20px rgba(0, 0, 0, 0.41);
 			}
-
 			&.ftco-seperator {
 				position: relative;
 				margin-left: 20px;
@@ -185,7 +181,6 @@ h5,
 		font-size: 16px;
 		letter-spacing: 0.1em;
 	}
-
 	&.scrolled {
 		position: fixed;
 		right: 0;
@@ -223,7 +218,6 @@ h5,
 				}
 			}
 		}
-
 		.navbar-nav {
 			@include media-breakpoint-down(md) {
 				background: none;
@@ -232,7 +226,6 @@ h5,
 				padding-right: 0rem !important;
 			}
 		}
-
 		.navbar-nav {
 			@include media-breakpoint-down(sm) {
 				background: none;
@@ -240,7 +233,6 @@ h5,
 				padding-right: 0 !important;
 			}
 		}
-
 		.navbar-toggler {
 			border: none;
 			color: rgba(0, 0, 0, 0.5) !important;
@@ -266,7 +258,6 @@ h5,
 		&.sleep {
 			transition: 0.3s all ease-out;
 		}
-
 		.navbar-brand {
 			color: $black;
 		}
@@ -395,7 +386,6 @@ h5,
 			opacity: 1;
 		}
 	}
-
 	.owl-nav {
 		position: absolute;
 		top: 50%;
@@ -462,6 +452,7 @@ h5,
 		}
 	}
 }
+
 .owl-custom-nav {
 	float: right;
 	position: relative;
@@ -584,10 +575,12 @@ h5,
 		}
 	}
 }
+
 .work-entry {
 	display: block;
 	width: 100%;
 	position: relative;
+	// background-color: red;
 	@include media-breakpoint-up(md) {
 		margin-bottom: 30px;
 	}
@@ -637,6 +630,7 @@ h5,
 .ftco-partner {
 	padding: 2em 0;
 }
+
 .partner {
 	.partner-entry {
 		opacity: 0.3;
@@ -744,6 +738,7 @@ h5,
 		opacity: 1;
 	}
 }
+
 .appointment-info {
 	width: 100%;
 	display: block;
@@ -766,11 +761,13 @@ h5,
 		color: $white;
 	}
 }
+
 .appointment {
 	h3 {
 		color: $white;
 	}
 }
+
 .appointment-form {
 	.form-group {
 		position: relative;
@@ -891,6 +888,7 @@ h5,
 		opacity: 0;
 	}
 }
+
 .discount {
 	color: rgba(255, 255, 255, 0.8);
 	h3 {
@@ -935,9 +933,11 @@ h5,
 		border-color: $black;
 	}
 }
+
 textarea.form-control {
 	height: inherit !important;
 }
+
 .ftco-vh-100 {
 	height: 100vh;
 	@include media-breakpoint-down(lg) {
@@ -946,6 +946,7 @@ textarea.form-control {
 		padding-bottom: 5em;
 	}
 }
+
 .ftco-vh-75 {
 	height: 75vh;
 	min-height: 700px;
@@ -999,6 +1000,7 @@ textarea.form-control {
 .bg-primary {
 	background: $primary !important;
 }
+
 .ftco-section {
 	.ftco-sub-title {
 		font-size: 16px;
@@ -1155,7 +1157,6 @@ textarea.form-control {
 }
 
 // Map
-
 #map {
 	height: 500px;
 	width: 100%;
@@ -1175,6 +1176,7 @@ textarea.form-control {
 		-webkit-box-shadow: 0 0 0 0 rgba($primary, 0);
 	}
 }
+
 @keyframes pulse {
 	0% {
 		-moz-box-shadow: 0 0 0 0 rgba($primary, 0.4);
@@ -1236,12 +1238,12 @@ textarea.form-control {
 }
 
 // magnific pop up
-
 .image-popup {
 	cursor: -webkit-zoom-in;
 	cursor: -moz-zoom-in;
 	cursor: zoom-in;
 }
+
 .mfp-with-zoom .mfp-container,
 .mfp-with-zoom.mfp-bg {
 	opacity: 0;
@@ -1255,6 +1257,7 @@ textarea.form-control {
 .mfp-with-zoom.mfp-ready .mfp-container {
 	opacity: 1;
 }
+
 .mfp-with-zoom.mfp-ready.mfp-bg {
 	opacity: 0.8;
 }
@@ -1338,6 +1341,7 @@ textarea.form-control {
 	width: 100%;
 	height: 270px;
 }
+
 .blog-entry {
 	background: $white;
 	overflow: hidden;
@@ -1627,6 +1631,7 @@ textarea.form-control {
 }
 
 /* Blog*/
+
 .post-info {
 	font-size: 12px;
 	text-transform: uppercase;
@@ -1635,7 +1640,6 @@ textarea.form-control {
 	letter-spacing: 0.1em;
 	> div {
 		display: inline-block;
-
 		.seperator {
 			display: inline-block;
 			margin: 0 10px;
@@ -1722,7 +1726,6 @@ textarea.form-control {
 .search-form {
 	background: lighten($black, 95%);
 	padding: 10px;
-
 	.form-group {
 		position: relative;
 		input {
@@ -1812,15 +1815,12 @@ textarea.form-control {
 }
 
 // sidebar
-
 .sidebar-box {
 	margin-bottom: 30px;
 	padding: 25px;
 	font-size: 15px;
 	width: 100%;
-
 	float: left;
-
 	background: $white;
 	*:last-child {
 		margin-bottom: 0;
